[package]
name = "clotho"
version = "0.1.0"
edition = "2021"
authors = ["Costas K"]
description = "A minimal AWS sigv4 verification library"
readme = "README.md"
homepage = "https://github.com/ClothoProxy/Clotho"
license = "MIT"
keywords = ["AWS", "proxy", "security"]

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.16", features = ["derive"] } 
data-encoding = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.30"
thiserror = "1.0.52"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.35.1", features = ["full"]}
httparse = "1.8.0"
icaparse = "0.2.0"

[dev-dependencies]
cargo-llvm-cov = "0.5.39"
criterion = { version = "0.4", features = ["html_reports"] }
tempfile = "3.9.0"

